[gd_scene load_steps=19 format=3 uid="uid://bwro3su7uu5nc"]

[ext_resource type="PackedScene" uid="uid://cmb1sw3nnmtwu" path="res://scenes/game_map.tscn" id="1_85pqf"]
[ext_resource type="Script" path="res://scripts/game_controller.gd" id="1_ceaui"]
[ext_resource type="PackedScene" uid="uid://cwq05q1j7y6oc" path="res://scenes/units/kalm_defender.tscn" id="2_qxrmv"]
[ext_resource type="PackedScene" uid="uid://cfyftids0wiyy" path="res://scenes/units/rush_defender.tscn" id="3_b7gfk"]
[ext_resource type="PackedScene" uid="uid://ddah6l6dir1cc" path="res://scenes/hex_highlight.tscn" id="3_jov1y"]
[ext_resource type="PackedScene" uid="uid://kyj353asqmpd" path="res://scenes/units/kalm_attacker.tscn" id="4_8po4t"]
[ext_resource type="PackedScene" uid="uid://des0k65qdru11" path="res://scenes/unit_properties.tscn" id="5_fvalf"]
[ext_resource type="PackedScene" uid="uid://dbfiadt6lyihi" path="res://scenes/units/rush_attacker.tscn" id="5_jkc0a"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="6_oqh7y"]
[ext_resource type="PackedScene" uid="uid://dlcqd0vk4pbc8" path="res://scenes/castle_properties.tscn" id="6_wqs25"]
[ext_resource type="Script" path="res://scripts/renderers/hex_renderer.gd" id="7_vnf7q"]
[ext_resource type="PackedScene" uid="uid://bjgrj5i2hexab" path="res://scenes/renderers/terrain_renderer.tscn" id="8_dljjw"]
[ext_resource type="PackedScene" uid="uid://dymd474460hms" path="res://scenes/renderers/underground_renderer.tscn" id="9_ivv3j"]
[ext_resource type="PackedScene" uid="uid://va5d7fiocsqv" path="res://scenes/renderers/water_renderer.tscn" id="10_hs8xf"]
[ext_resource type="PackedScene" uid="uid://dq8eku3fdcfse" path="res://scenes/renderers/mountains_renderer.tscn" id="11_5ftrv"]
[ext_resource type="PackedScene" uid="uid://diaqvkpp57p3r" path="res://scenes/renderers/forests_renderer.tscn" id="12_0asyr"]
[ext_resource type="Script" path="res://scripts/utils/HexCellsBetween.cs" id="20_webjb"]
[ext_resource type="Script" path="res://scripts/VisibilityMap.cs" id="22_npf05"]

[node name="GameController" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0419369, -0.044529, -0.0145645)
script = ExtResource("1_ceaui")
morale_starting_values = Array[float]([1.0, 0.9])
count_starting_values = Array[int]([25, 30])
supplies_starting_values = Array[int]([300, 250])
castle_supplies_starting_values = Array[int]([1500, 2000])
unit_names = Array[String](["Mc. Alfredo", "Mc. Anthuan", "Mc. Leo", "Mc. Kandal", "Mr. Bean", "Mr. Rice", "Mr. Fried Egg", "Generic Unit Name", "John", "Pepe Grillo"])
defender_scenes = Array[PackedScene]([ExtResource("2_qxrmv"), ExtResource("2_qxrmv"), ExtResource("2_qxrmv"), ExtResource("3_b7gfk"), ExtResource("3_b7gfk")])
attacker_scenes = Array[PackedScene]([ExtResource("4_8po4t"), ExtResource("4_8po4t"), ExtResource("4_8po4t"), ExtResource("5_jkc0a"), ExtResource("5_jkc0a")])
highlight_scene = ExtResource("3_jov1y")
unit_properties_scene = ExtResource("5_fvalf")
castle_properties_scene = ExtResource("6_wqs25")

[node name="GameMap" parent="." instance=ExtResource("1_85pqf")]
map_size = Vector2i(32, 32)

[node name="Units" type="Node3D" parent="."]

[node name="Highlights" type="Node3D" parent="."]

[node name="UnitProperties" type="Node3D" parent="."]

[node name="CastleProperties" type="Node3D" parent="."]

[node name="TimeBetweenTurns" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.322596, 0.946537, 0, -0.946537, 0.322596, 21.385, 10, 40.957)
fov = 103.9
script = ExtResource("6_oqh7y")
camera_speed = 10.0
camera_damping = 0.2

[node name="TerrainRenderer" type="Node3D" parent="."]
script = ExtResource("7_vnf7q")
chunk_size = 4
multi_mesh_scene = ExtResource("8_dljjw")

[node name="UndergroundRenderer" type="Node3D" parent="."]
script = ExtResource("7_vnf7q")
chunk_size = 4
multi_mesh_scene = ExtResource("9_ivv3j")

[node name="WaterRenderer" type="Node3D" parent="."]
script = ExtResource("7_vnf7q")
chunk_size = 4
multi_mesh_scene = ExtResource("10_hs8xf")

[node name="MountainsRenderer" type="Node3D" parent="."]
script = ExtResource("7_vnf7q")
chunk_size = 4
multi_mesh_scene = ExtResource("11_5ftrv")

[node name="ForestsRenderer" type="Node3D" parent="."]
script = ExtResource("7_vnf7q")
chunk_size = 4
multi_mesh_scene = ExtResource("12_0asyr")

[node name="HexMath" type="Node" parent="."]
script = ExtResource("20_webjb")

[node name="VisibilityMap" type="Node" parent="."]
script = ExtResource("22_npf05")
